<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layoutBackGroundColor"
    android:orientation="vertical"
    android:padding="@dimen/padding_layout"
    tools:context=".activities.PlayerLoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/padding_layout"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/txtPlayerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_playerName"
        android:text="@string/player_name"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/txtSize_app"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_playerName"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtEnterPlayerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_button"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:padding="@dimen/padding_edit_text" />

        <Button
            android:id="@+id/btnNextPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_button"
            android:background="@drawable/rounded_true_answer_button"
            android:text="@string/next_page"
            android:textSize="@dimen/txtSize_app" />
    </LinearLayout>


</LinearLayout>