<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stars"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding_top_youwin"
    tools:context=".activities.WrongAnswerActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_playerName"
        android:gravity="center"
        android:text="@string/end_game_congrats"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/txtSize_app"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtQuestionNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_playerName"
        android:gravity="center"
        android:text=""
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/txtSize_app"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtQuestionPoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_playerName"
        android:gravity="center"
        android:text=""
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/txtSize_app"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_question_box">

        <Button
            android:id="@+id/btnTurnToMainPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_button"
            android:background="@drawable/rounded_true_answer_button"
            android:text="@string/turn_to_main_page"
            android:textSize="@dimen/txtSize_app" />

        <Button
            android:id="@+id/btnEndGameExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_button"
            android:background="@drawable/rounded_false_button"
            android:text="@string/exit_page"
            android:textSize="@dimen/txtSize_app" />
    </LinearLayout>
</LinearLayout>
