<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layoutBackGroundColor"
    android:orientation="vertical"
    android:padding="@dimen/padding_layout"
    tools:context=".activities.CategoriesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_option_button"
            android:gravity="center"
            android:padding="@dimen/padding_text"
            android:text="@string/categories"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/txtSize_app"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_playerName"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_playerName"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_player"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/txtSize_app"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPlayerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/txtSize_app"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout"
        android:layout_weight="10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/category_layout_margin"
                android:layout_weight="1"
                android:background="@drawable/rounded_true_answer_button"
                android:padding="@dimen/margin_button">

                <Button
                    android:id="@+id/btnCategoryTechnology"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/technology"
                    android:textSize="@dimen/txtSize_app" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/category_layout_margin"
                android:layout_weight="1"
                android:background="@drawable/rounded_category_history_button"
                android:padding="@dimen/margin_button">

                <Button
                    android:id="@+id/btnCategoryHistory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/history"
                    android:textSize="@dimen/txtSize_app" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/category_layout_margin"
                android:layout_weight="1"
                android:background="@drawable/rounded_category_sport_button"
                android:padding="@dimen/margin_button">

                <Button
                    android:id="@+id/btnCategorySport"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/sport"
                    android:textSize="@dimen/txtSize_app" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/category_layout_margin"
                android:layout_weight="1"
                android:background="@drawable/rounded_category_science_button"
                android:padding="@dimen/margin_button">

                <Button
                    android:id="@+id/btnCategoryScience"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/science"
                    android:textSize="@dimen/txtSize_app" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/category_layout_margin"
        android:background="@drawable/rounded_false_button"
        android:text="@string/exit_page"
        android:textSize="@dimen/txtSize_app" />

</LinearLayout>

